--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -43,10 +43,10 @@
     align-items: center;
     cursor: pointer;
 }
-
 .nav div:hover{
-    background-color: blue;
+    background-color: var(--color-hover);
 }
+
 
 .lineRight{
     background-color: var(--line-color);
