--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -18,8 +18,6 @@
     width: 3vw;
 }
 
-
-
 .nav{
     height: 100%;
     flex: 1;
@@ -66,4 +64,38 @@
     font-size: 1.8rem;
     cursor: pointer;
     width: 3vw;
+}
+
+
+@media(max-width: 650px){
+    .lineLeft,
+    .lineRight{
+        display: none;
+    }
+
+
+    .container{
+        height: 100%;
+    }
+    .content{
+        flex-direction: column;
+        height: 100%;
+    }
+
+    .logout{
+        width: auto;
+    }
+    .empty{
+        display: none;
+    }
+
+    .nav{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        padding: 20px 0 40px 0;
+    }
+    .nav div{
+        padding: 10px;
+    }
 }
