--- a/src/components/BoxInfo/styles.module.css
+++ b/src/components/BoxInfo/styles.module.css
@@ -64,6 +64,7 @@
     letter-spacing: 2px;
     cursor: pointer;
     transition: .3s;
+    white-space: nowrap;
 }
 
 
@@ -77,6 +78,6 @@
 }
 @media(max-width: 480px){
     .container{
-        min-width: 0;
+        min-width: 250px;
     }
 }
